--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
 				<div id="errorMessage" class="card-panel red lighten-2" th:if="${param.error}">
 					<span class="card-title">Błędna nazwa lub hasło</span>
 				</div>
-				<form class="col s12" action="/login" method="post">
+				<form class="col s12" action="/login" method="POST">
 					<div class="row">
 						<div class="input-field col s12">
 							<input id="username" name="username" type="text" class="validate" /><label for="username">Nazwa</label>
@@ -29,6 +29,12 @@
 						</button>
 					</div>
 					<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+				</form>
+				<form th:action="@{/signin/twitter}" method="POST" class="center">
+					<div class="row">
+						<button class="btn indigo" name="twitterSignin" type="submit">Logowanie przez Twitter</button>
+						<i class="mdi-social-group-add left"></i>
+					</div>
 				</form>
 			</div>
 		</div>
