--- a/bin/templates/resultPage.html
+++ b/bin/templates/resultPage.html
@@ -9,7 +9,7 @@
 		<h2 class="indigo-text center" th:text="|Wyniki wyszukiwania ${search}|">Tweety</h2>
 		<ul class="collection">
 			<li class="collection-item avatar" th:each="tweet : ${tweets}"><img th:src="${tweet.profileImageUrl}" alt=""
-				class="circle" /> <span class="title" th:text="${tweet.name}">U¿ytkownik</span>
+				class="circle" /> <span class="title" th:text="${tweet.user}">U¿ytkownik</span>
 				<p th:text="${tweet.text}">Treœæ tweeta</p></li>
 		</ul>
 	</div>
