--- a/bin/templates/layout/default.html
+++ b/bin/templates/layout/default.html
@@ -38,6 +38,7 @@
 	</div>
 	<script type="text/javascript" src="/webjars/jquery/3.1.1-1/jquery.js"></script>
 	<script type="text/javascript" src="/webjars/materializecss/0.97.7/js/materialize.min.js"></script>
+	<script src="/webjars/lodash/4.17.4/lodash.js"></script>
 	<script type="text/javascript" layout:fragment="script"></script>
 </body>
 </html>
